feat: implementando responsive.css e estilizando

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <title>Convert Money</title>
 </head>
 
 <body>
     <div class="container-box">
         <header>
-            <p>www.covertmoney.com</p>
-
             <ul>
                 <li><a href="#" target="_blank"><ion-icon name="logo-github"></ion-icon>
                     </a></li>
@@ -50,7 +49,7 @@
                         </select>
                     </label>
 
-                    <input id="conversion-result" type="text" readonly>
+                    <input id="conversion-result" type="text" value="$0.00" readonly>
                 </div>
 
                 <div class="convert-button">
