feat: Adicionando conversão para Bitcoin e Libra

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                         <select id="convert-for">
                             <option value="dolar" selected>$ Dólar Americano</option>
                             <option value="euro">€ Euro</option>
+                            <option value="libra">£ libra esterlina</option>
                             <option value="bitcoin">₿ Bitcoin</option>
                         </select>
                     </label>
