feat: adicionando links

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div class="container-box">
         <header>
             <ul>
-                <li><a href="#" target="_blank"><ion-icon name="logo-github"></ion-icon>
+                <li><a href="https://github.com/thiago-weslley/ConvertMoney" target="_blank"><ion-icon name="logo-github"></ion-icon>
                     </a></li>
-                <li><a href="#" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                <li><a href="https://www.linkedin.com/in/thiago-weslley/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
             </ul>
         </header>
 
