feat: adicionando funcionalidade ao botão clear

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                 <div class="convert-button">
                     <button id="convert-button">Converter</button>
-                    <button>Limpar</button>
+                    <button id="clear-button">Limpar</button>
                 </div>
             </section>
         </main>
